Fix sponsored post overflow problem

--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -1,7 +1,7 @@
 #sidebar {
   float: right;
   width: 300px;
-  margin: 7px 5px 0px 5px;
+  margin: 0px 5px 0px 5px;
 
   input.text-field {
     border: 1px solid gray;
