--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -4,5 +4,5 @@
 }
 
 #sponsored {
-  overflow: hidden;
+  margin-right: 310px;
 }
